Images and Media

--- a/aboutus.html
+++ b/aboutus.html
@@ -23,6 +23,9 @@
     <header class="jumbotron jumbotron-fluid">
         <div class="container">
             <div class="row">
+                <div class="col-4 col-sm-3 col-md-2 align-self-center">
+                    <a href="index.html"><img src="img/logo.png" class="img-fluid"/></a>
+                </div>
                 <div class="col">
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
@@ -33,7 +36,8 @@
 
     <nav class="navbar navbar-expand-sm navbar-dark sticky-top">
         <div class="container">
-            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="nucampNavbar">
+            <a class="navbar-brand" href="index.html"><img src="img/logo.png" height="30" width="30"></a>
+            <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#nucampNavbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="nucampNavbar">
@@ -63,10 +67,38 @@
     </div>
 
         <div class="row row-content">
-            <div class="col col-sm-6">
-                <div class="col">
+            <div class="col-sm-6">
                     <h3>Our Mission</h3>
                     <p>We present a curated database of the best campsites in the vast woods and backcountry of the World Wide Web Wilderness. We increase access to adventure for the public while promoting safe and respectful use of resources. The expert wilderness trekkers on our staff personally verify each campsite to make sure that they are up to our standards. We also present a platform for campers to share reviews on campsites they have visited with each other.</p>
+                </div>
+                <div class="col-sm-6">
+                    <div class="card">
+                        <h3 class="card-holder bg-primary test-white">Facts At a Glance </h3>
+                        <div class="card-body">
+                            <dl class="row">
+                                <dt class="col-6">Founded</dt>
+                                <dd class="col-6">February 3, 2016</dd>
+                                <dt class="col-6">No. of Campsites in 2019</dt>
+                                <dd class="col-6">563</dd>
+                                <dt class="col-6">No. of Reviews in 2019</dt>
+                                <dd class="col-6">4388</dd>
+                                <dt class="col-6">Employes</dt>
+                                <dd class="col-6">42</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card bg-light mt">
+                        <blockquote class="blockquote card-body">
+                            <p class="mb-0">I will not follow where the path may lwad, but I will go where there is no path, and I will leave a trail.</p>
+                            <footer class="blockquote-footer">Muriel Strode,
+                                <cite title="Source Title">"Wind-Wafted Wild Flowers" -
+                                    The Open Court, 1983
+                                </cite>
+                            </footer>
+                        </blockquote>
+                    </div>
                 </div>
             </div>
         </div>
@@ -88,7 +120,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer class="site-footer">
         <div class="container">
             <div class="row row-content align-items-center">
                 <div class="col-4 col-sm-2 offset-1">
