--- a/aboutus.html
+++ b/aboutus.html
@@ -66,6 +66,7 @@
         </div>
     </div>
 
+    <div class="container">
         <div class="row row-content">
             <div class="col-sm-6">
                     <h3>Our Mission</h3>
@@ -102,6 +103,7 @@
                 </div>
             </div>
         </div>
+    </div>
 
         <div class="row row-content">
             <div class="col col-12">
