--- a/index.html
+++ b/index.html
@@ -138,20 +138,19 @@
 
     <footer class="site-footer">
         <div class="container">
-            <div class="row row-content align-items-center">
+            <div class="row">
                 <div class="col-4 col-sm-2 offset-1">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Sites</a></li>
                         <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
-            </div>
-            <div class="col-6 col-sm-5 text-center">
-                <h5>Social</h5>
-                <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
+                <div class="col-6 col-sm-5 text-center">
+                    <h5>Social</h5>
+                    <a class="btn btn-social-icon btn-instagram" href="http://instagram.com/"><i class="fa fa-instagram"></i></a>
                     <a class="btn btn-social-icon btn-facebook" href="http://facebook.com/"><i class="fa fa-facebook"></i></a>
                     <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
                     <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
@@ -159,7 +158,8 @@
                 <div class="col-sm-4 text-center">
                     <a role="button" class="btn btn-link" href="tel:2065551234"><i class="fa fa-phone fa-lg text-primary"></i> 1-206-555-1234</a><br />
                     <a role="button" class="btn btn-link" href="mailto:campsites@nucamp.co"><i class="fa fa-envelope-o fa-lg text-primary"></i> campsites@nucamp.co</a>
-            </div>
+                </div>
+           </div>
         </div>
     </footer>
 
