--- a/index.html
+++ b/index.html
@@ -149,14 +149,7 @@
                 </div>
             </div>
         </div>
-    </div>
-
-        <div>
-
-        </div>
-
-    </div>
-
+ 
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
@@ -198,6 +191,14 @@
                         <span class="carousel-control-next-icon"></span>
                         <span class="sr-only">Next</span>
                     </a>
+                    <div class="btn-group" id="carouselButton">
+                        <button class="btn btn-danger btn-sm" id="carouselPause">
+                            <i class="fa fa-pause"></i>                            
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carouselPlay">
+                            <i class="fa fa-play"></i>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -314,6 +315,18 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <script>
+        $(funcion(){
+            $(".carousel").carousel( { interval: 2000 } );
+            $("#carouselPause").click(function(){  
+                $(".carousel").carousel("pause");              
+            });
+            $("#carouselPlay").click(function(){
+                $(".carousel").carousel("cycle");
+            });
+        });
+    </script>
 
 </body>
 
