--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
                 </div>
             </div>
         </div>
- 
+    </div>
+
     <div class="container">
         <div class="row row-content">
             <div class="col-md-8 mx-auto">
